Add Senior Software Developer experience

--- a/CV-english.tex
+++ b/CV-english.tex
@@ -42,11 +42,11 @@
 
 	\Huge \textbf{Bruno Vale Barbosa Eiterer}
 
-	\LARGE Developer
+	\LARGE Software Developer
 	\vspace{12.5pt}
 	\begin{adjustwidth}{\parindent}{0pt}
 	\begin{minipage}[t]{0.65\textwidth}
-	\large I am currently interested software development in C, C++, C\#, Java and Python.\\
+	\large I am a software developer working mainly with C, C++, C\#, with previous experience in Java, Python and Javascript as well.\\
 
   \Large{\textbf{Experiences}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \\
   
@@ -58,9 +58,12 @@
   		\setlength{\parskip}{5.5pt}
   		\Large{\textbf{RDI Software - São Paulo}}
   		
+  		\large{\textit{Senior Software Developer}} \\
   		\large{\textit{Software Development Consultant}}
   		\begin{itemize}
-  			\item \normalsize{Web applications development for McDonald's restaurants in C\#, C++ and C.}
+  			\item \normalsize{Web applications backend development for McDonald's restaurants in C\#, C++ and C}
+  			\item \normalsize{Web applications frontend development in html and javascript}
+  			\item \normalsize{Work in critical and high profile issues while providing support for other team members}
   		\end{itemize}
   	}
   \end{minipage} \\ \\
@@ -73,8 +76,9 @@
       \setlength{\parskip}{5.5pt}
       \Large{\textbf{Gertec - São Paulo}}
     
-      \large{\textit{Software Developer}} \\
-      \large{\textit{Middle Software Developer}}
+      \large{\textit{Middle Software Developer}} \\
+      \large{\textit{Software Developer}}
+      
       \begin{itemize}
         \item \normalsize{Embedded Software development for payment solutions in Linux and Android environments using C, C++ and Java}
         \item \normalsize{Desktop applications development in C\#/.NET and WPF}
@@ -91,10 +95,10 @@
       \setlength{\parskip}{5.5pt}
       \Large{\textbf{Freelance - São Paulo}}
     
-      \large{\textit{Desenvolvedor de Software}}
+      \large{\textit{Software Developer}}
       \begin{itemize}
-        \item \normalsize{Development of Desktop Application for results calculation of small companies in Java and JavaFX}
-        \item \normalsize{Implementation of Patrimony Control, Chart of Accounts, monthly and yearly Results Calculation, Comparison of Results}
+        \item \normalsize{Development of a Desktop Application for results calculation of small companies in Java and JavaFX}
+        \item \normalsize{Implementation of Patrimony Control, Chart of Accounts, monthly and yearly Results Calculation and Comparison of Results}
       \end{itemize}
     }
     \end{minipage} \\ \\
@@ -110,7 +114,6 @@
 	  \large{\textit{Embedded Software Intern in the Motion Control team}}
 	  \begin{itemize}
 	    \item \normalsize{Implementation of an EtherCAT protocol prototype in C, both in Linux and Bare-Metal}
-	    \item \normalsize{Implementation of test code in Python}
 	  \end{itemize}
 	}
 \end{minipage} \\ \\
@@ -215,14 +218,14 @@
 	\small{C++}
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
-	\centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediate}
+	\centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Advanced}
  \end{minipage} \\ \hspace{0pt} \\
 
   \begin{minipage}{0.65\textwidth}
 	\small{C\# .NET}
   \end{minipage}
   \begin{minipage}{0.3\textwidth}
-	\centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediate}
+	\centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgblkcircle$ \\  \footnotesize{Advanced}
   \end{minipage} \\ \hspace{0pt} \\
 
   \begin{minipage}{0.65\textwidth}
@@ -231,19 +234,26 @@
   \begin{minipage}{0.3\textwidth}
 	\centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediate}
   \end{minipage} \\ \hspace{0pt} \\
- 
-  \begin{minipage}{0.65\textwidth}
-   \small{Python}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
- \end{minipage} \\ \hspace{0pt} \\
-
-  \begin{minipage}{0.65\textwidth}
-	\small{WPF}
+  
+   \begin{minipage}{0.65\textwidth}
+  	\small{Python}
   \end{minipage}
   \begin{minipage}{0.3\textwidth}
-	\centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
+  	\centering $\mdlgblkcircle$ $\mdlgblkcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Intermediate}
+  \end{minipage} \\ \hspace{0pt} \\
+  
+   \begin{minipage}{0.65\textwidth}
+  	\small{WPF}
+  \end{minipage}
+  \begin{minipage}{0.3\textwidth}
+  	\centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
+  \end{minipage} \\ \hspace{0pt} \\
+  
+   \begin{minipage}{0.65\textwidth}
+  	\small{Javascript}
+  \end{minipage}
+  \begin{minipage}{0.3\textwidth}
+  	\centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
   \end{minipage} \\ \hspace{0pt} \\
 
   \begin{minipage}{0.65\textwidth}
@@ -309,13 +319,6 @@
  \end{minipage}
  \begin{minipage}{0.3\textwidth}
   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
- \end{minipage} \\ \hspace{0pt} \\
- 
-  \begin{minipage}{0.65\textwidth}
-   \small{Altium Designer}
- \end{minipage}
- \begin{minipage}{0.3\textwidth}
-   \centering $\mdlgblkcircle$ $\mdlgwhtcircle$ $\mdlgwhtcircle$ \\  \footnotesize{Basic}
  \end{minipage} \\ \hspace{0pt} \\
 
 \end{minipage}
