Fix RDI experience to fit single page

--- a/CV-english.tex
+++ b/CV-english.tex
@@ -61,8 +61,7 @@
   		\large{\textit{Senior Software Developer}} \\
   		\large{\textit{Software Development Consultant}}
   		\begin{itemize}
-  			\item \normalsize{Web applications backend development for McDonald's restaurants in C\#, C++ and C}
-  			\item \normalsize{Web applications frontend development in html and javascript}
+  			\item \normalsize{Fullstack development for McDonald's restaurants applications in C\#, C++, C, html and javascript}
   			\item \normalsize{Work in critical and high profile issues while providing support for other team members}
   		\end{itemize}
   	}
