--- a/CV-english.tex
+++ b/CV-english.tex
@@ -46,7 +46,7 @@
 	\vspace{12.5pt}
 	\begin{adjustwidth}{\parindent}{0pt}
 	\begin{minipage}[t]{0.65\textwidth}
-	\large I am a software developer working mainly with C, C++, C\#, with previous experience in Java, Python and Javascript as well.\\
+	\large I am a software developer working mainly with C, C++ and C\#, with previous experience in Java, Python and Javascript as well.\\
 
   \Large{\textbf{Experiences}} \normalsize \\ \rule{\textwidth}{0.5pt} \\ \\
   
